<resources>
    <string name="app_name">GrocNow</string>
    <string name="my_image">my image</string>
    <string name="vishal_mishra">Vishal Mishra</string>
    <string name="vishalmishra9442_gmail_com">vishalmishra9442@gmail.com</string>
    <string name="open_drawer">open navigation drawer</string>
    <string name="close_drawer">close navigation drawer</string>
    <string name="my_profile">My Profile</string>
    <string name="my_order">My Order</string>
    <string name="my_cart">My Cart</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="home">Home</string>
    <string name="Rs">\u20B9</string>
    <string name="search_for_products_and_more">Search for Products and more</string>
    <string-array name="query_suggestions">
        <item>Snacks</item>
        <item>South Indian</item>
        <item>Ice Cream</item>
        <item>North Indian</item>
        <item>Lays</item>
    </string-array>
</resources>
