<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:title="@string/home"
            android:id="@+id/home"
            android:icon="@drawable/ic_home"
            />
        <item
            android:title="@string/my_profile"
            android:id="@+id/my_profile"
            android:icon="@drawable/profile"
            />
        <item
            android:title="@string/my_order"
            android:id="@+id/my_order"
            android:icon="@drawable/ic_email_black_24dp"
            />
        <item
            android:title="@string/my_cart"
            android:id="@+id/my_cart"
            android:icon="@drawable/cart_24dp"
            />
    </group>

    <item android:title="Communicate">

        <menu>
            <item
                android:title="About us"
                android:id="@+id/about"
                android:icon="@drawable/ic_info"
                />
            <item
                android:title="Share"
                android:id="@+id/share"
                android:icon="@drawable/ic_share_black_24dp"
                />
        </menu>
    </item>
    <item android:title="Others">

        <menu>
            <item
                android:title="Log out"
                android:id="@+id/logout"
                android:icon="@drawable/ic_logout"
                />

        </menu>
    </item>
</menu>